@@ -18,7 +18,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
-  <signal name="destroy" handler="on_quit_activate" last_modification_time="Fri, 28 Mar 2003 09:09:29 GMT"/>
+  <signal name="destroy" handler="on_destroy_signal" last_modification_time="Fri, 28 Mar 2003 09:09:29 GMT"/>
   <signal name="delete_event" handler="on_delete_event" last_modification_time="Fri, 28 Mar 2003 09:10:18 GMT"/>
 
   <child>
