@@ -1,6 +1,13 @@
+2005-02-24  Ross Burton  <ross@burtonini.com>
+
+	* data/sound-juicer.glade:
+	* src/sj-main.c:
+	Quit correctly (closes 168018, thanks Raj M Madhan).
+
 2005-02-21  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* configure.in: Added ne "Nepali" in ALL_LINGUAS
+
 2005-02-16  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
